tests/errors/compiler/aster_before_func/int_func.c
int *func()
{
	return 0;
}

void main()
{

}
